fix Footer content overlap

--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -1,6 +1,6 @@
 .footer {
-  display: grid;
-  place-items: center;
+  display: flex;
+  justify-content: center;
   margin-top: 30vh;
   font-size: 0.8em;
 }
@@ -8,10 +8,18 @@
 .footerCredit {
   position: absolute;
   right: 10px;
+  bottom: 0px;
   font-size: 0.6em;
   color: rgb(135, 131, 149);
 }
 
 .footerCredit.noshow {
   opacity: 0%;
+}
+
+@media only screen and (max-width: 775px) {
+  /***************** Nav bar *****************/
+  .footer {
+    padding-bottom: 15px;
+  }
 }
